clear layout cache when closing a document

BUG: 271250