part/view/kateviewinternal.cpp
@@ -3161,6 +3161,7 @@ void KateViewInternal::clear()
   m_startPos.setPosition (0, 0);
   m_displayCursor = KTextEditor::Cursor(0, 0);
   m_cursor.setPosition(0, 0);
+  cache()->clear();
   updateView(true);
 }
 
